--- a/autoware_launch/config/system/component_state_monitor/topics.yaml
+++ b/autoware_launch/config/system/component_state_monitor/topics.yaml
@@ -154,18 +154,18 @@
     error_rate: 1.0
     timeout: 1.0
 
-# - module: vehicle
-#   mode: [online, logging_simulation, planning_simulation]
-#   type: autonomous
-#   args:
-#     node_name_suffix: vehicle_status_steering_status
-#     topic: /vehicle/status/steering_status
-#     topic_type: autoware_vehicle_msgs/msg/SteeringReport
-#     best_effort: false
-#     transient_local: false
-#     warn_rate: 5.0
-#     error_rate: 1.0
-#     timeout: 1.0
+- module: vehicle
+  mode: [online, logging_simulation, planning_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: vehicle_status_steering_status
+    topic: /vehicle/status/steering_status
+    topic_type: autoware_vehicle_msgs/msg/SteeringReport
+    best_effort: false
+    transient_local: false
+    warn_rate: 3.0
+    error_rate: 1.0
+    timeout: 2.0
 
 - module: system
   mode: [online, logging_simulation, planning_simulation]
@@ -193,3 +193,107 @@
     warn_rate: 5.0
     error_rate: 1.0
     timeout: 1.0
+
+- module: vehicle
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: serial_apu_node
+    topic: /oau/actuatory_raw
+    topic_type: std_msgs/msg/String
+    best_effort: false
+    transient_local: false
+    warn_rate: 2.0
+    error_rate: 1.0
+    timeout: 2.0
+
+- module: vehicle
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: serial_oau_node
+    topic: /oau/sensory_raw
+    topic_type: std_msgs/msg/String
+    best_effort: false
+    transient_local: false
+    warn_rate: 3.0
+    error_rate: 1.0
+    timeout: 2.0
+
+- module: sensing
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: raymand_gnss_node
+    topic: /sensing/gnss/raymand/nav_sat_fix
+    topic_type: sensor_msgs/msg/NavSatFix
+    best_effort: false
+    transient_local: false
+    warn_rate: 5.0
+    error_rate: 2.0
+    timeout: 2.0
+
+- module: sensing
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: autopilot_driver_node
+    topic: /sensing/imu/imu_raw
+    topic_type: sensor_msgs/msg/Imu
+    best_effort: false
+    transient_local: false
+    warn_rate: 15.0
+    error_rate: 8.0
+    timeout: 2.0
+
+- module: sensing
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: lslidar
+    topic: /sensing/lidar/top/pointcloud_raw
+    topic_type: sensor_msgs/msg/PointCloud2
+    best_effort: false
+    transient_local: false
+    warn_rate: 5.0
+    error_rate: 2.0
+    timeout: 2.0
+
+- module: sensing
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: ars408_tcp_node
+    topic: /sensing/radar/objects_raw
+    topic_type: radar_msgs/msg/RadarTracks
+    best_effort: false
+    transient_local: false
+    warn_rate: 1.0
+    error_rate: 0.5
+    timeout: 5.0
+
+- module: sensing
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: gscam_publisher_image
+    topic: /sensing/camera/camera0/image_rect_color
+    topic_type: sensor_msgs/msg/Image
+    best_effort: false
+    transient_local: false
+    warn_rate: 5.0
+    error_rate: 2.0
+    timeout: 2.0
+  
+- module: sensing
+  mode: [online, logging_simulation]
+  type: autonomous
+  args:
+    node_name_suffix: gscam_publisher_camera_info
+    topic: /sensing/camera/camera0/camera_info
+    topic_type: sensor_msgs/msg/CameraInfo
+    best_effort: false
+    transient_local: false
+    warn_rate: 5.0
+    error_rate: 2.0
+    timeout: 2.0
