--- a/autoware_launch/config/system/component_state_monitor/topics.yaml
+++ b/autoware_launch/config/system/component_state_monitor/topics.yaml
@@ -194,18 +194,18 @@
     error_rate: 1.0
     timeout: 1.0
 
-- module: vehicle
-  mode: [online, logging_simulation]
-  type: autonomous
-  args:
-    node_name_suffix: serial_apu_node
-    topic: /oau/actuatory_raw
-    topic_type: std_msgs/msg/String
-    best_effort: false
-    transient_local: false
-    warn_rate: 2.0
-    error_rate: 1.0
-    timeout: 2.0
+# - module: vehicle
+#   mode: [online, logging_simulation]
+#   type: autonomous
+#   args:
+#     node_name_suffix: serial_apu_node
+#     topic: /oau/actuatory_raw
+#     topic_type: std_msgs/msg/String
+#     best_effort: false
+#     transient_local: false
+#     warn_rate: 2.0
+#     error_rate: 1.0
+#     timeout: 2.0
 
 - module: vehicle
   mode: [online, logging_simulation]
