--- a/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/autoware_behavior_path_static_obstacle_avoidance_module/static_obstacle_avoidance.param.yaml
+++ b/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/autoware_behavior_path_static_obstacle_avoidance_module/static_obstacle_avoidance.param.yaml
@@ -19,9 +19,9 @@
       # avoidance is performed for the object type with true
       target_object:
         car:
-          th_moving_speed: 1.0                          # [m/s]
+          th_moving_speed: 2.5                          # [m/s]
           th_moving_time: 2.0                           # [s]
-          longitudinal_margin: 0.0                      # [m]
+          longitudinal_margin: 5.0                      # [m]
           lateral_margin:
             soft_margin: 0.3                            # [m]
             hard_margin: 0.2                            # [m]
@@ -29,7 +29,7 @@
           max_expand_ratio: 0.0                         # [-] FOR DEVELOPER
           envelope_buffer_margin: 0.5                   # [m] FOR DEVELOPER
         truck:
-          th_moving_speed: 1.0
+          th_moving_speed: 2.0
           th_moving_time: 2.0
           longitudinal_margin: 0.0
           lateral_margin:
@@ -39,7 +39,7 @@
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
         bus:
-          th_moving_speed: 1.0
+          th_moving_speed: 2.0
           th_moving_time: 2.0
           longitudinal_margin: 0.0
           lateral_margin:
@@ -49,7 +49,7 @@
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
         trailer:
-          th_moving_speed: 1.0
+          th_moving_speed: 2.0
           th_moving_time: 2.0
           longitudinal_margin: 0.0
           lateral_margin:
@@ -59,9 +59,9 @@
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
         unknown:
-          th_moving_speed: 0.28
+          th_moving_speed: 2.28
           th_moving_time: 1.0
-          longitudinal_margin: 0.0
+          longitudinal_margin: 5.0
           lateral_margin:
             soft_margin: 0.7
             hard_margin: -0.2
@@ -181,7 +181,7 @@
         check_current_lane: false                       # [-]
         check_shift_side_lane: true                     # [-]
         check_other_side_lane: false                    # [-]
-        check_unavoidable_object: false                 # [-]
+        check_unavoidable_object: true                 # [-]
         check_other_object: true                        # [-]
         # collision check parameters
         check_all_predicted_path: false                 # [-]
